--- a/doc/FenetreCas-doc.tex
+++ b/doc/FenetreCas-doc.tex
@@ -3,8 +3,8 @@
 % arara: pdflatex: {shell: yes, synctex: no, interaction: batchmode} if found('log', '(undefined references|Please rerun|Rerun to get)')
 
 \documentclass[french,a4paper,11pt]{article}
-\def\TPversion{0.1.0}
-\def\TPdate{17 Mars 2023}
+\def\TPversion{0.1.1}
+\def\TPdate{7 mai 2023}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{amsmath,amssymb}
@@ -265,6 +265,8 @@ Le fonctionnement global est :
 
 \section{Historique}
 
+\verb|v0.1.1|~:~~~~Clés [Fond] et [FondCouleur] pour le fond des lignes
+
 \verb|v0.1.0|~:~~~~Version initiale.
 
 \hspace*{1cm}
@@ -363,6 +365,8 @@ Le premier argument, optionnel et entre \texttt{[...]} propose les \Cle{clés} s
 	\hfill~défaut : \Cle{true}
 	\item \Cle{TailleCommande} pour la taille de la commande ; \hfill~défaut : \Cle{\textbackslash normalsize}
 	\item \Cle{TailleResultat} pour la taille du résultat ; \hfill~défaut : \Cle{\textbackslash large}
+	\item le booléen \Cle{Fond} activer la coloration de fond de la ligne ; \hfill~défaut : \Cle{false}
+	\item \Cle{CouleurFond} pour spécifier une couleur de fond si \Cle{Fond=true} ; \hfill~défaut : \Cle{white}
 	\item \Cle{MargeH} pour spécifier l'espacement horizontal entre les calculs et les bords verticaux ;
 	
 	\hfill~défaut : \Cle{0.2}
@@ -380,6 +384,7 @@ Les arguments obligatoires, et entre \texttt{\{...\}}, correspondent à la comma
 	\item les tailles des caractères sont fixées par les \Cle{clés} précédemment explicitées ;
 	\item la saisie est libre au niveau du contenu, de la police et des couleurs.
 \end{itemize}
+\vspace*{-\baselineskip}\leavevmode
 \end{tipblock}
 
 \begin{PresentationCode}{}
@@ -397,7 +402,7 @@ Les arguments obligatoires, et entre \texttt{\{...\}}, correspondent à la comma
 		{(1/4+1/3)/(1/5+2/7)}
 		{$\rightarrow$ \: $\dfrac{\dfrac14+\dfrac13}{\dfrac15+\dfrac27}=
 			\fpeval{(1/4+1/3)/(1/5+2/7)}$}
-	\LigneCalculsGeogebra[HauteurAuto=false,HauteurLigne=5]
+	\LigneCalculsGeogebra[HauteurAuto=false,HauteurLigne=5,Fond,CouleurFond=cyan!10]
 		{(1+i)\textasciicircum{}2}
 		{$2\text{i}$}
 \end{CalculFormelGeogebra}
@@ -497,6 +502,10 @@ Le premier argument, optionnel et entre \texttt{[...]} propose les \Cle{clés} s
 	\item \Cle{PosRes} pour la position du résultat ; \hfill~défaut : \Cle{centre}
 	\item \Cle{TailleCommande} pour la taille de la commande ; \hfill~défaut : \Cle{\textbackslash normalsize}
 	\item \Cle{TailleResultat} pour la taille du résultat ; \hfill~défaut : \Cle{\textbackslash large}
+	\item le booléen \Cle{Fond} activer la coloration de fond de la ligne ; \hfill~défaut : \Cle{false}
+	\item \Cle{CouleurFond} pour spécifier une couleur (sous la forme \Cle{Couleur} ou \Cle{CouleurCmd/CouleurRes}) de fond si \Cle{Fond=true} ;
+	
+	\hfill~défaut : \Cle{white}
 	\item \Cle{MargeH} pour spécifier l'espacement horizontal entre les calculs et les bords verticaux ;
 	
 	\hfill~défaut : \Cle{0.15}
@@ -530,10 +539,10 @@ Un exemple en ligne :~
 	\LigneCalculsXcas
 		{f(x):=1+sqrt(x+3)}
 		{$x \rightarrow 1+\sqrt{x+3}$}
-	\LigneCalculsXcas
+	\LigneCalculsXcas[,Fond,CouleurFond=yellow!10]
 		{\texttt{Dériver[exp(0.1*x)]}}
 		{\texttt{x $\rightarrow$ 0.1*exp(0.1*x)}}
-	\LigneCalculsXcas[TailleResultat=\Huge]
+	\LigneCalculsXcas[TailleResultat=\Huge,Fond,CouleurFond=orange!5/cyan!5]
 		{(1/4+1/3)/(1/5+2/7)}
 		{$\rightarrow$ \: $\dfrac{\dfrac14+\dfrac13}{\dfrac15+\dfrac27}$}
 	\end{CalculFormelXcas}
