--- a/doc/FenetreCas-doc.tex
+++ b/doc/FenetreCas-doc.tex
@@ -3,8 +3,8 @@
 % arara: pdflatex: {shell: yes, synctex: no, interaction: batchmode} if found('log', '(undefined references|Please rerun|Rerun to get)')
 
 \documentclass[french,a4paper,11pt]{article}
-\def\TPversion{0.1.2}
-\def\TPdate{21 mai 2023}
+\def\TPversion{0.1.3}
+\def\TPdate{14 juin 2023}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{amsmath,amssymb}
@@ -74,9 +74,9 @@
 
 \tcbset{vignetteMaJ/.style={%
 	fontupper={\vphantom{pf}\footnotesize\ttfamily},
-	vignettes,colframe=ForestGreen!50!black,coltitle=white,colback=purple!25,%
+	vignettes,colframe=green!50!black,coltitle=white,colback=purple!25,%
 	overlay={\begin{tcbclipinterior}%
-			\fill[fill=purple!75]($(interior.south west)$) rectangle node[rotate=90]{\tiny \sffamily{\textcolor{Black}{\scalebox{0.85}[0.75]{\textbf{MàJ}}}}} ($(interior.north west)+(5pt,0pt)$);%
+			\fill[fill=purple!75]($(interior.south west)$) rectangle node[rotate=90]{\tiny \sffamily{\textcolor{black}{\scalebox{0.85}[0.75]{\textbf{MàJ}}}}} ($(interior.north west)+(5pt,0pt)$);%
 	\end{tcbclipinterior}}
 	}
 }
@@ -175,7 +175,7 @@
 
 \vspace{0.5cm}
 
-%\hfill{}\textit{Merci à Denis Bitouzé et à Gilles Le Bourhis pour leurs retours et idées !}
+\hfill{}\textit{Merci à Christophe Bal pour ses retours !}
 
 \smallskip
 
@@ -265,9 +265,12 @@ Le fonctionnement global est :
 
 \section{Historique}
 
-\verb|v0.1.2|~:~~~~Clés [Select] pour le \textit{rond} de sélection sur Geogebra
 
-\verb|v0.1.1|~:~~~~Clés [Fond] et [FondCouleur] pour le fond des lignes
+\verb|v0.1.3|~:~~~~Clé \textsf{[PosRes]} pour la réponse (gauche/centre/droite) + correction de bugs mineurs.
+
+\verb|v0.1.2|~:~~~~Clé \textsf{[Select]} pour le \textit{rond} de sélection sur Geogebra.
+
+\verb|v0.1.1|~:~~~~Clés \textsf{[Fond]} et \textsf{[FondCouleur]} pour le fond des lignes.
 
 \verb|v0.1.0|~:~~~~Version initiale.
 
@@ -367,6 +370,9 @@ Le premier argument, optionnel et entre \texttt{[...]} propose les \Cle{clés} s
 	\hfill~défaut : \Cle{true}
 	\item \Cle{TailleCommande} pour la taille de la commande ; \hfill~défaut : \Cle{\textbackslash normalsize}
 	\item \Cle{TailleResultat} pour la taille du résultat ; \hfill~défaut : \Cle{\textbackslash large}
+	\item \cmaj{0.1.3} \Cle{PosRes} pour la position du résultat parmi \Cle{gauche/centre/droite} ;
+	
+	\hfill~défaut : \Cle{gauche}
 	\item le booléen \Cle{Fond} pour activer la coloration de fond de la ligne ; \hfill~défaut : \Cle{false}
 	\item \Cle{CouleurFond} pour spécifier une couleur de fond si \Cle{Fond=true} ; \hfill~défaut : \Cle{white}
 	\item le booléen \Cle{Select} pour (dés)activer le \textit{rond} de sélection ; \hfill~défaut : \Cle{true}
@@ -408,7 +414,7 @@ Les arguments obligatoires, et entre \texttt{\{...\}}, correspondent à la comma
 		{(1/4+1/3)/(1/5+2/7)}
 		{$\rightarrow$ \: $\dfrac{\dfrac14+\dfrac13}{\dfrac15+\dfrac27}=
 			\fpeval{(1/4+1/3)/(1/5+2/7)}$}
-	\LigneCalculsGeogebra[HauteurAuto=false,HauteurLigne=5,Fond,CouleurFond=cyan!10]
+	\LigneCalculsGeogebra[HauteurAuto=false,HauteurLigne=5,Fond,CouleurFond=cyan!10, PosRes=droite]
 		{(1+i)\textasciicircum{}2}
 		{$2\text{i}$}
 \end{CalculFormelGeogebra}
@@ -505,7 +511,9 @@ Le premier argument, optionnel et entre \texttt{[...]} propose les \Cle{clés} s
 \begin{itemize}
 	\item \Cle{CouleurCmd} pour la couleur de la commande ; \hfill~défaut : \Cle{red}
 	\item \Cle{CouleurRes} pour la couleur du résultat ; \hfill~défaut : \Cle{blue}
-	\item \Cle{PosRes} pour la position du résultat ; \hfill~défaut : \Cle{centre}
+	\item \cmaj{0.1.3} \Cle{PosRes} pour la position du résultat parmi \Cle{gauche/centre/droite} ; 
+	
+	\hfill~défaut : \Cle{centre}
 	\item \Cle{TailleCommande} pour la taille de la commande ; \hfill~défaut : \Cle{\textbackslash normalsize}
 	\item \Cle{TailleResultat} pour la taille du résultat ; \hfill~défaut : \Cle{\textbackslash large}
 	\item le booléen \Cle{Fond} activer la coloration de fond de la ligne ; \hfill~défaut : \Cle{false}
@@ -539,7 +547,7 @@ Un exemple en ligne :~
 	\LigneCalculsXcas%
 		{\sffamily g(x):=4/(1+e\textasciicircum(-k x))}
 		{$\mathsf{x \rightarrow \dfrac{4}{e^{-kx}+1}}$}
-	\LigneCalculsXcas[TailleCommande=\Large,TailleResultat=\LARGE]%
+	\LigneCalculsXcas[TailleCommande=\Large,TailleResultat=\LARGE,PosRes=droite]%
 		{\sffamily g(x):=4/(1+e\textasciicircum(-k x))}
 		{$\mathsf{x \rightarrow \dfrac{4}{e^{-kx}+1}}$}
 	\LigneCalculsXcas
@@ -548,7 +556,7 @@ Un exemple en ligne :~
 	\LigneCalculsXcas[,Fond,CouleurFond=yellow!10]
 		{\texttt{Dériver[exp(0.1*x)]}}
 		{\texttt{x $\rightarrow$ 0.1*exp(0.1*x)}}
-	\LigneCalculsXcas[TailleResultat=\Huge,Fond,CouleurFond=orange!5/cyan!5]
+	\LigneCalculsXcas[TailleResultat=\Huge,Fond,CouleurFond=orange!5/cyan!5, PosRes=gauche]
 		{(1/4+1/3)/(1/5+2/7)}
 		{$\rightarrow$ \: $\dfrac{\dfrac14+\dfrac13}{\dfrac15+\dfrac27}$}
 	\end{CalculFormelXcas}
